# doubao-no-watermarking

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  python-lint.yml
legal/: THIRD_PARTY_NOTICES.txt
scripts/: build_macos.sh  build_windows.ps1
src/desktop_app/: __init__.py  launcher.py  runtime.py  server.py
src/desktop_app/ui/: index.html
